--- a/app/src/main/res/layout/activity_guess_activity.xml
+++ b/app/src/main/res/layout/activity_guess_activity.xml
@@ -8,7 +8,7 @@
     tools:ignore="MissingDefaultResource">
 
     <TextView
-        android:id="@+id/tickets"
+        android:id="@+id/entityName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -23,11 +23,22 @@
         android:layout_height="234dp"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tickets"
+        app:layout_constraintBottom_toBottomOf="@+id/entityName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/tickets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="44dp"
+        android:text="ticket"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
