--- a/app/src/main/res/layout/activity_guess_activity.xml
+++ b/app/src/main/res/layout/activity_guess_activity.xml
@@ -11,11 +11,12 @@
         android:id="@+id/entityName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="356dp"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/tableLayout" />
 
     <ImageView
         android:id="@+id/entityImage"
@@ -58,8 +59,10 @@
         app:layout_constraintVertical_bias="0.066" />
 
     <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
             android:layout_width="match_parent"
