--- a/app/src/main/res/layout/activity_guess_activity.xml
+++ b/app/src/main/res/layout/activity_guess_activity.xml
@@ -72,7 +72,7 @@
                 android:id="@+id/btnGuess"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Guess" />
         </TableRow>
 
         <TableRow
@@ -84,7 +84,7 @@
                 android:id="@+id/btnClear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Clear" />
         </TableRow>
 
     </TableLayout>
