--- a/app/src/main/res/layout/activity_guess_activity.xml
+++ b/app/src/main/res/layout/activity_guess_activity.xml
@@ -11,20 +11,19 @@
         android:id="@+id/entityName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="356dp"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tableLayout" />
+        android:layout_marginTop="25dp"
+        android:text=""
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/entityImage" />
 
     <ImageView
         android:id="@+id/entityImage"
         android:layout_width="241dp"
         android:layout_height="234dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toBottomOf="@+id/entityName"
+        android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,24 +44,22 @@
         android:id="@+id/guessInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="10dp"
         android:ems="8"
         android:gravity="center"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="MM_DD_YYYY"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="MM/DD/YYYY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/entityName"
-        app:layout_constraintVertical_bias="0.066" />
+        app:layout_constraintTop_toBottomOf="@+id/entityName" />
 
     <TableLayout
-        android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginTop="450dp"
+        app:layout_constraintTop_toBottomOf="@+id/guessInput">
 
         <TableRow
             android:layout_width="match_parent"
@@ -70,21 +67,24 @@
 
             <Button
                 android:id="@+id/btnGuess"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Guess" />
+                android:layout_width="150dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="30dp"
+                android:text="Submit Guess" />
+
+            <Button
+                android:id="@+id/btnClear"
+                android:layout_width="150dp"
+                android:layout_height="70dp"
+                android:layout_marginLeft="50dp"
+                android:text="Change Entity" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="115dp"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/btnClear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Clear" />
         </TableRow>
 
     </TableLayout>
